<resources>
    <string name="app_name">TheBinderAlpha1.0</string>
    <string name="members_title">Members</string>
    <string name="default_member_name">Name of Member</string>
    <string name="default_member_name_assigned">Nick name</string>
    <string name="default_member_email">Email</string>
    <string name="default_member_contact">Contact</string>
    <string name="save_button">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
